# ldrs

./: .gitignore  Cargo.toml  Makefile  README.md  cliff.toml  dist-workspace.toml  ldrs-sf-installer.sh  release-plz.toml
.cargo/: config.toml
.github/: build-setup.yml
.github/workflows/: release-plz.yml  release.yml  test.yml
benches/: arrow_extraction.rs
crates/ldrs/: CHANGELOG.md  Cargo.toml
crates/ldrs-arrow/: Cargo.toml
crates/ldrs-arrow/src/: arrow_access.rs  arrow_transforms.rs  lib.rs  types.rs
crates/ldrs-core/: Cargo.toml
crates/ldrs-core/src/: execute.rs  lib.rs  phase.rs  plan.rs  sink.rs  source.rs  spawn.rs
crates/ldrs-delta/: Cargo.toml
crates/ldrs-delta/src/: dv.rs  lib.rs  merge.rs  overwrite.rs
crates/ldrs-parquet/: Cargo.toml
crates/ldrs-parquet/src/: lib.rs  parquet_builder.rs  parquet_types.rs  sink.rs  writer.rs
crates/ldrs-parquet/tests/: schema_readback.rs  sink_integration.rs
crates/ldrs-postgres/: Cargo.toml
crates/ldrs-postgres/src/: arrow_bridge.rs  client.rs  extracted_values.rs  lib.rs  pg_numeric.rs  postgres_execution.rs  sink.rs
crates/ldrs-storage/: Cargo.toml
crates/ldrs-storage/src/: lib.rs
crates/ldrs-test-fixtures/: Cargo.toml
crates/ldrs-test-fixtures/src/: lib.rs
crates/ldrs-test-fixtures/test_data/public.numbers/: public.numbers.snappy.parquet
crates/ldrs-test-fixtures/test_data/public.string_values/: public.strings.snappy.parquet
crates/ldrs/src/: cli_schema.rs  file_source.rs  finalize.rs  lib.rs  main.rs  parquet.rs  phase.rs  pq.rs  sink.rs
crates/ldrs/src/arrow_access/: mod.rs
crates/ldrs/src/delta/: mod.rs
crates/ldrs/src/ldrs_arrow/: mod.rs
crates/ldrs/src/ldrs_config/: config.rs  field_validation.rs  mod.rs
crates/ldrs/src/ldrs_delta/: dv.rs  merge.rs  mod.rs  stats.rs
crates/ldrs/src/ldrs_env/: mod.rs
crates/ldrs/src/ldrs_parquet/: mod.rs
crates/ldrs/src/ldrs_postgres/: arrow_bridge.rs  client.rs  extracted_values.rs  mod.rs  pg_numeric.rs  postgres_execution.rs  schema.rs
crates/ldrs/src/ldrs_schema/: mod.rs
crates/ldrs/src/ldrs_snowflake/: mod.rs  snowflake_source.rs
crates/ldrs/src/ldrs_storage/: mod.rs
crates/ldrs/src/lua_logic/: lua_args.rs  mod.rs
crates/ldrs/src/parquet_provider/: mod.rs
crates/ldrs/src/path_pattern/: mod.rs
crates/ldrs/src/postgres/: execute.rs  mod.rs  postgres_destination.rs  resolve.rs  schema.rs  schema_change.rs
crates/ldrs/src/test_utils/: mod.rs
crates/ldrs/src/types/: mod.rs
crates/ldrs/tests/: delta_integration.rs  merge_integration.rs  parquet_integration.rs  postgres_integration.rs  snowflake_integration.rs
crates/ldrs/tests/lua_mod/tests/test_data/schema.table/: init.lua
crates/ldrs/tests/test_data/configs/: users.yaml
crates/ldrs/tests/test_data/public.numbers_edge/: numbers_edge.snappy.parquet
docs/: .gitignore  README.md  astro.config.mjs  package-lock.json  package.json
docs/public/brand/: preview.html
docs/src/components/: HeroWordmark.astro  SiteTitle.astro  Wordmark.astro
docs/src/content/docs/: 404.mdx  getting-started.md  index.mdx  ldrs-sf.md  vision.md
docs/src/styles/: custom.css
go/ldrs-sf/: go.mod  go.sum  main.go
go/ldrs-sf/cmd/: exec.go  query.go  root.go
go/ldrs-sf/database/: snowflake.go
scripts/: cliff.sh  setup_test.sh  tag-release.sh
src/: config.rs  delta.rs  lib.rs  main.rs  postgres.rs  pq.rs
src/arrow_access/: arrow_transforms.rs  extracted_values.rs  mod.rs
src/delta/: mod.rs  schema.rs
src/ldrs_arrow/: mod.rs
src/ldrs_config/: config.rs  mod.rs
src/ldrs_delta/: dv.rs  merge.rs  mod.rs  stats.rs
src/ldrs_env/: mod.rs
src/ldrs_parquet/: mod.rs
src/ldrs_postgres/: client.rs  drop_replace.rs  mod.rs  mvr_config.rs  postgres_destination.rs  postgres_execution.rs  schema.rs  schema_change.rs
src/ldrs_schema/: mod.rs
src/ldrs_snowflake/: mod.rs  snowflake_source.rs
src/ldrs_storage/: mod.rs
src/lua_logic/: mod.rs  nom_pattern.rs
src/parquet_provider/: mod.rs
src/path_pattern/: mod.rs
src/storage/: azure.rs  mod.rs
src/test_utils/: mod.rs
src/types/: lua_args.rs  mod.rs  parquet_types.rs  schema.rs
test_data/: docker-compose.yml  get_files.sh  load_config.yaml  public.numbers.merge.snappy.parquet  public.numbers.snappy.parquet  public.strings.snappy.parquet  public.users.merge.snappy.parquet  public.users.snappy.parquet  setup_test.sh  shutdown_test.sh
tests/: delta_integration.rs  parquet_integration.rs  postgres_integration.rs  snowflake_integration.rs
tests/lua_mod/tests/test_data/schema.table/: init.lua
tests/lua_mod_snowflake/tests/test_data/schema.table/: init.lua
wix/: main.wxs
