[package]
name = "ldrs"
version = "0.16.0"
edition = "2021"
repository = "https://github.com/johanan/ldrs"
authors = ["Joshua Johanan"]
description = "A simple and fast data loader"

[package.metadata.wix]
upgrade-guid = "8C9C4D06-8A69-41CD-97A4-2C623BEE72A3"
path-guid = "004BAE91-11D1-4A69-B9EF-CA72B0773731"
license = false
eula = false

[dependencies]
anyhow = "1.0.100"
arrow = { version = "57", features = [] }
arrow-array = "57"
arrow-schema = { version = "57", features = ["serde"] }
bigdecimal = "0.4.10"
chrono = "0.4.39"
clap = { version = "4.5.54", features = ["derive"] }
delta_kernel = { git = "https://github.com/delta-io/delta-kernel-rs", branch = "main", features = ["default-engine-native-tls", "arrow-57", "internal-api"] }
dotenvy = "0.15.7"
futures = "0.3.31"
mlua = { version = "0.11.5", features = ["lua54", "vendored", "serialize"] }
native-tls = { version = "0.2.14", features = ["vendored"] }
object_store = { version = "0.12.5", features = ["azure"] }
parking_lot = "0.12.3"
parquet = { version = "57", features = ["async", "arrow", "object_store", "arrow_canonical_extension_types"] }
pg_bigdecimal = "0.1.5"
postgres-native-tls = "0.5.2"
postgres-types = "0.2.12"
serde = { version = "1.0.228", features = ["serde_derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
tokio = { version = "1.49.0", features = ["rt", "rt-multi-thread", "macros"] }
tokio-postgres = { version = "0.7.16", features = [
    "with-chrono-0_4",
    "with-uuid-1",
    "with-serde_json-1",
] }
tokio-stream = "0.1.18"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
url = "2.5.8"
uuid = { version = "1.19.0", features = ["v4"] }
nom = { version = "8.0.0" }
handlebars = { version = "6.4.0", features = ["string_helpers"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rstest = "0.26.1"
test-log = { version = "0.2.19", features = ["default", "trace"] }
tokio-util = { version = "0.7.14", features = ["io", "io-util"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[[bench]]
name = "arrow_extraction"
harness = false
