[workspace]
resolver = "2"
members = ["crates/*"]
default-members = [
    "crates/ldrs",
    "crates/ldrs-arrow",
    "crates/ldrs-core",
    "crates/ldrs-delta",
    "crates/ldrs-parquet",
    "crates/ldrs-postgres",
    "crates/ldrs-storage",
]

[workspace.package]
edition = "2021"
authors = ["Joshua Johanan"]
repository = "https://github.com/johanan/ldrs"

[workspace.dependencies]
arrow = { version = "58", features = ["chrono-tz"] }
arrow-array = "58"
arrow-schema = { version = "58", features = ["serde", "canonical_extension_types"] }
anyhow = "1.0.102"
bytes = "1"
chrono = "0.4.44"
deadpool-postgres = "0.14.1"
delta_kernel = "0.25.0"
delta_kernel_default_engine = { version = "0.25.0", default-features = false, features = ["arrow-58", "rustls"] }
futures = "0.3.32"
object_store = { version = "0.13.1", features = ["azure"] }
parquet = { version = "58", features = ["async", "arrow", "object_store", "arrow_canonical_extension_types"] }
postgres-native-tls = "0.5.3"
postgres-types = "0.2.13"
serde = { version = "1.0.228", features = ["serde_derive"] }
schemars = "1.2.1"
serde_json = "1.0.149"
serde_yaml = "0.9.34"
tokio = { version = "1.52.1", features = ["rt", "rt-multi-thread", "macros"] }
tokio-postgres = { version = "0.7.17", features = ["with-chrono-0_4", "with-uuid-1"] }
tracing = "0.1.44"
url = "2.5.8"
uuid = { version = "1.20.0", features = ["v4"] }

# dev stuff
rstest = "0.26.1"
test-log = { version = "0.2.20", features = ["default", "trace"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "fat"
