[package]
name = "ldrs-delta"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[dependencies]
ldrs-arrow = { path = "../ldrs-arrow" }
ldrs-parquet = { path = "../ldrs-parquet" }
ldrs-storage = { path = "../ldrs-storage" }

anyhow.workspace = true
arrow.workspace = true
arrow-array.workspace = true
arrow-schema.workspace = true
chrono.workspace = true
crc = "3.4"
delta_kernel = { workspace = true, features = ["internal-api", "default-engine-rustls", "arrow-58"] }
futures.workspace = true
object_store.workspace = true
parquet.workspace = true
roaring = "0.11.3"
serde.workspace = true
serde_json.workspace = true
url.workspace = true
uuid.workspace = true
z85 = "3.0.7"

[dev-dependencies]
bytes.workspace = true
