[package]
name = "ldrs"
version = "0.21.2"
edition.workspace = true
repository.workspace = true
authors.workspace = true
description = "A simple and fast data loader"

[package.metadata.wix]
upgrade-guid = "8C9C4D06-8A69-41CD-97A4-2C623BEE72A3"
path-guid = "004BAE91-11D1-4A69-B9EF-CA72B0773731"
license = false
eula = false

[dependencies]
anyhow.workspace = true
arrow.workspace = true
arrow-array.workspace = true
arrow-schema.workspace = true
bytes.workspace = true
chrono.workspace = true
clap = { version = "4.6.1", features = ["derive"] }
deadpool-postgres.workspace = true
dotenvy = "0.15.7"
futures.workspace = true
ldrs-arrow = { path = "../ldrs-arrow" }
ldrs-core = { path = "../ldrs-core" }
ldrs-delta = { path = "../ldrs-delta" }
ldrs-parquet = { path = "../ldrs-parquet" }
ldrs-postgres = { path = "../ldrs-postgres" }
ldrs-storage = { path = "../ldrs-storage" }
mlua = { version = "0.11.6", features = ["lua54", "vendored", "serialize"] }
object_store.workspace = true
parking_lot = "0.12.5"
parquet.workspace = true
postgres-native-tls.workspace = true
postgres-types.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
tokio-postgres.workspace = true
tokio-stream = "0.1.18"
tracing.workspace = true
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
url.workspace = true
uuid.workspace = true
nom = { version = "8.0.0" }
handlebars = { version = "6.4.0" }
heck = "0.5"
which = "8.0.2"

[dev-dependencies]
ldrs-test-fixtures = { path = "../ldrs-test-fixtures" }
criterion = { version = "0.5", features = ["html_reports"] }
delta_kernel.workspace = true
rstest.workspace = true
test-log.workspace = true
tokio-util = { version = "0.7.18", features = ["io", "io-util"] }

[[bench]]
name = "arrow_extraction"
harness = false
